--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "bukhari-management",
   "version": "1.0.0",
-  "description": "Bukhari Restaurant Management System is a comprehensive solution developed as part of the requirements for a degree in Computer Science.  This system is designed to streamline and enhance the operations of a restaurant located in Tanga, Tanzania. The system covers various aspects of restaurant management, including in-location dining, takeaway, and ordering.  Additionally, it features a management panel to facilitate efficient administration and control.",
-  "main": "index.js",
+  "description": "Bukhari Restaurant Management System is a comprehensive solution developed as part of the requirements for a degree in Computer Science. This system is designed to streamline and enhance the operations of a restaurant located in Tanga, Tanzania. The system covers in-location dining, takeaway, and ordering, with a management panel for administration.",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
